tests/errors/sem.expected_constant.init-list.or
main :: () -> void {
    t := int;
    t.{};
};
